--- a/1index.html
+++ b/1index.html
@@ -33,7 +33,7 @@
             <div id="scoreboard" class="row">
                 <div class="col-xs-6">
                     <h6>Time Remaining</h6>
-                    <h1 class="scoreboard-data" id="time-remaining"></h1>
+                    <h1 class="scoreboard-data" id="time-remaining">60</h1>
                 </div>
                 <div class="col-xs-6">
                     <h6>Score</h6>
@@ -44,14 +44,14 @@
             <!-- TODO 1 DONE  Make a "New Game" button    -->
             <button class="btn btn-primary" id="ngbutton" onclick="startGame()">New Game</button>
         </section>
-<p>Spell as many words as you can,using only these letters :</p>
+<p>Spell as many words as you can, using only these letters :</p>
         <!-- things that should not show up until the (first) game has started -->
         <section id="game">
 
             <!-- TODO 4
             Add some instructions so the user knows what to do.
             -->
-<p>Spell as many words as you can,using only these letters :</p>
+<p>Spell as many words as you can, using only these letters :</p>
             <!-- TODO 5
             Make an empty container to hold the letter chips.
             -->
