--- a/1index.html
+++ b/1index.html
@@ -47,8 +47,7 @@
         <!-- things that should not show up until the (first) game has started -->
         <section id="game">
 
-            <!-- TODO 4
-            Add some instructions so the user knows what to do.
+            <!-- TODO 4 Add some instructions so the user knows what to do.
             -->
             <p>Spell as many words as you can, using only these letters :</p>
             <!-- TODO 5
@@ -58,7 +57,7 @@
             <!-- the form via which the user attempts to submit new words -->
             <form id="word-attempt-form">
                 <!-- the actual text box where the user types -->
-                <input type="text" id="textbox"/>
+                <input type="text" onclick="getfocus()" id="textbox"/>
 
                 <br>
                 <!-- red feedback chips will be injected here -->
