--- a/1index.html
+++ b/1index.html
@@ -50,10 +50,15 @@
             <!-- TODO 4 Add some instructions so the user knows what to do.
             -->
             <p>Spell as many words as you can, using only these letters :</p>
-            <!-- TODO 5
-            Make an empty container to hold the letter chips.
+            <!-- TODO 5  Make an empty container to hold the letter chips.
             -->
+            <div id ="chipcontainer"><span class="tag tag-lg chipcontainer"></span>
+                <span class="tag tag-lg chipcontainer"></span>
+                <span class="tag tag-lg chipcontainer"></span>
+                <span class="tag tag-lg chipcontainer"></span>
+                <span class="tag tag-lg chipcontainer"></span>
 
+            </div>
             <!-- the form via which the user attempts to submit new words -->
             <form id="word-attempt-form">
                 <!-- the actual text box where the user types -->
