--- a/1index.html
+++ b/1index.html
@@ -52,11 +52,12 @@
             <p>Spell as many words as you can, using only these letters :</p>
             <!-- TODO 5  Make an empty container to hold the letter chips.
             -->
-            <div id ="chipcontainer"><span class="tag tag-lg chipcontainer"></span>
-                <span class="tag tag-lg chipcontainer"></span>
-                <span class="tag tag-lg chipcontainer"></span>
-                <span class="tag tag-lg chipcontainer"></span>
-                <span class="tag tag-lg chipcontainer"></span>
+            <div id ="allowed-letters"><span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span></span>
+                <span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span>
+                <span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span>
+                <span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span>
+                <span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span>
+                <span class="tag tag-lg allowed-letters"><span class="tag tag-default tag-sm"></span>
 
             </div>
             <!-- the form via which the user attempts to submit new words -->
